refactor: improve docker inspection and repo hygiene

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
+# Build artifacts
+stacksnap
+
+# Runtime output
 backups/
 snapshots/
-stacksnap
-stacksnap-linux-amd64
-stacksnap-linux-arm64
+
+# OS junk
+.DS_Store
